--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A superset of similar GitHub for all the people.",
   "main": "app.js",
   "scripts": {
-    "start": "node bin/www-prd",
-    "dev": "./node_modules/.bin/nodemon bin/www-dev",
-    "prd": "pm2 start bin/www-prd",
+    "start": "node bin/www.prd",
+    "dev": "./node_modules/.bin/nodemon bin/www.dev",
+    "prd": "pm2 start bin/www.prd",
     "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
