--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node bin/www.prd",
     "dev": "./node_modules/.bin/nodemon bin/www.dev",
-    "prd": "pm2 start bin/www.prd",
+    "prd": "pm2 start bin/www.prd --name='shulive-task'",
     "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
